[tool.poetry]
name = "regenbib"
version = "1.0.0"
description = "(Re-)generate tidy .bib files from online sources"
authors = ["Joachim Neu <jneu@stanford.edu>"]
license = "GPL-3.0-only"
readme = "README.md"
homepage = "https://github.com/joachimneu/regenbib"
repository = "https://github.com/joachimneu/regenbib"
documentation = "https://github.com/joachimneu/regenbib"
keywords = ["latex", "bibtex", "biblatex"]


[tool.poetry.scripts]
regenbib = 'regenbib.cli_render:run'
regenbib-import = 'regenbib.cli_import:run'
regenbib-scrub = 'regenbib.cli_scrub:run'


[tool.poetry.dependencies]
python = "^3.10"
bibtex-dblp = "^0.9"
marshmallow-dataclass = { version = "8.5.14", extras = ["enum", "union"] }
arxiv = "^2.2.0"
requests = "^2.29.0"
setuptools = "^75.0.0"
diskcache = "^5.6.3"
Sickle = "^0.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
